--- a/Project Lunen/Assembly-CSharp.csproj
+++ b/Project Lunen/Assembly-CSharp.csproj
@@ -64,8 +64,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Action.cs" />
+    <Compile Include="Assets\Scripts\LunaDex.cs" />
+    <Compile Include="Assets\Scripts\Lunen.cs" />
     <Compile Include="Assets\Scripts\Monster.cs" />
     <Compile Include="Assets\Scripts\Move.cs" />
+    <Compile Include="Assets\Scripts\Types.cs" />
     <Reference Include="UnityEngine">
       <HintPath>/Applications/Unity/Hub/Editor/2019.3.13f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
